xx-01-2016 vx.x.x.0:
* Greatly improve custom form overview, with categories, archive and following

23-01-2016 v2.4.2.0:
* Changed base32 implementation to `baas32`
* Fixed: Allow changing custom form input for users that have not paid for the
    form
* Fixed: Autofill custom forms again
* Fixed: Editing of users for non admin users
* Use new method of managing the viaduct configuration so not everything is
    secret.
* Added Copernica Integration to viaduct


13-12-2015 v2.4.1.0:
* Update: Calendar id's for new VIA Events

12-12-2015 v2.4.0.0:
* Use base32 encoding for PimPy
* Fixed: some buttons without color
* Fixed: some translations
* Fixed: permissions for committee pages for BC
* Fixed: activity image overwritten

14-11-2015 v2.3.0.0:
* Added: Link to automatically sync Google groups with pimpy groups
* Update: Datatables use for company page


18-07-2015 v2.2.0.0:
* Added: A new news system for the homepage
* Added: Support for bilingual activities and examination
* Fixed: Uppercase extension on uploading files
* Added: Automatic database migrations
* Removed: Deadline from pimpy, useless feature
* Added: Opt-in for company information on registration
* Fixed: Styling of pimpy minutes and registration checkboxes
* Fixed: Internal server error on minutes add

17-06-2015 v2.1.0.1:
* Fix iDeal

13-06-2015 v2.1.0.0:
* Add NEWS file
* Show loading status in PimPy (fixes VIA-45)
* Backlink to activity on mollie payment success page
* Mark all tasks with the same ID in PimPy (fixes VIA-202)
* Add a module that allows users to create custom url-redirects
* "Positie vacant" on committee pages is now much more prominent
* Course description is not required anymore
* Added help pages to modules
* Added optional terms to custom forms
* Make adding courses and educations dynamic while uploading examinations