@@ -1,0 +1,12 @@
+<strong>Hello {{user.name}}!</strong><br>
+<br>
+To reset your <strong>via</strong> account password click on the following link. Please note that reset link will expire in 1 hour. If you didn't issue a password reset you can safely ignore this email.<br>
+<br>
+<a href='{{reset_link}}'>{{reset_link}}</a><br>
+<br>
+Have a nice day,<br>
+<br>
+<strong>via</strong><br>
+<br>
+<small>This email was sent by a user triggered event and thus can't really be unsubscribed from.<br>
+If you keep getting these messages and don't want to, please contact the board.</small>
