@@ -1,5 +1,6 @@
 xx-01-2016 vx.x.x.0:
 * Greatly improve custom form overview, with categories, archive and following
+* Update: Removed seperate gmail for password requests, now using google apps
 
 23-01-2016 v2.4.2.0:
 * Changed base32 implementation to `baas32`
